syntax = "proto3";

import "google/api/annotations.proto";

service AutoIncrement {
    rpc GetSingle (GetSingleRequest) returns (GetSingleResponse) {
        option (google.api.http) = {
            post: "/auto-increment/single",
            body: "*"
        };
    }

    rpc GetMultiple (GetMultipleRequest) returns (GetMultipleResponse) {
        option (google.api.http) = {
            post: "/auto-increment/multiple",
            body: "*"
        };
    }

    rpc GetLast (GetLastRequest) returns (GetLastResponse) {
        option (google.api.http) = {
            get: "/auto-increment/last/{key}"
        };
    }

    rpc Join (JoinRequest) returns (JoinResponse) {
        option (google.api.http) = {
            post: "/auto-increment/join",
            body: "*"
        };
    }
}

message GetSingleRequest {
    string key = 1;
}

message GetSingleResponse {
    string key = 1;
    uint64 value = 2;
}

message GetMultipleRequest {
    string key = 1;
    uint64 quantity = 2;
}

message GetMultipleResponse {
    string key = 1;
    repeated uint64 values = 2;
}

message GetLastRequest {
    string key = 1;
}

message GetLastResponse {
    string key = 1;
    uint64 value = 2;
}

message JoinRequest {
    string nodeID = 1;
    string nodeAddress = 2;
}

message JoinResponse {
    
}