syntax = "proto3";

package raftautoincrement.service.v1;

option go_package = "github.com/ldmtam/raft-auto-increment/pb";

import "google/api/annotations.proto";

service AutoIncrementService {
  rpc GetOne(GetOneRequest) returns (GetOneResponse) {
    option (google.api.http) = {
      get : "/auto-increment/one/{key}",
    };
  }

  rpc GetMany(GetManyRequest) returns (GetManyResponse) {
    option (google.api.http) = {
      get : "/auto-increment/many/{key}/{quantity}",
    };
  }

  rpc GetLastInserted(GetLastInsertedRequest)
      returns (GetLastInsertedResponse) {
    option (google.api.http) = {
      get : "/auto-increment/last-inserted/{key}"
    };
  }

  rpc Join(JoinRequest) returns (JoinResponse) {
    option (google.api.http) = {
      post : "/auto-increment/join",
      body : "*"
    };
  }
}

message GetOneRequest { string key = 1; }

message GetOneResponse {
  string key = 1;
  uint64 value = 2;
}

message GetManyRequest {
  string key = 1;
  uint64 quantity = 2;
}

message GetManyResponse {
  string key = 1;
  uint64 from = 2;
  uint64 to = 3;
}

message GetLastInsertedRequest { string key = 1; }

message GetLastInsertedResponse {
  string key = 1;
  uint64 value = 2;
}

message JoinRequest {
  string raftID = 1;
  string raftAddress = 2;
}

message JoinResponse {}